--- a/CF-Project/index.html
+++ b/CF-Project/index.html
@@ -16,7 +16,7 @@
     <main>
         <header class="page-header">
 
-            <img src="img/spaceman.png" alt="astronaut" class="page-header__item" id="logo">
+            <img src="img/spaceman.png" alt="astronaut-logo" class="page-header__item" id="logo">
 
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
