Replaced placeholder texts
I replaced the placeholder text on the about page.

--- a/CF-Project/about.html
+++ b/CF-Project/about.html
@@ -43,19 +43,19 @@
 <div class="bio">
    <h1>About Me</h1>
 
-    <p>This page is about myself. This is what I enjoy doing:</p>
+    <p>Welcome to my page once again! Below you'll find a list of my skills. If you'd like a copy of my CV, simply click the button at the bottom of the list!</p>
     <ul class="bio-list">
       <li>
-        Front-end development
+        Front-end Development
       </li>
       <li>
-        Back-end development
+        Back-end Development
       </li>
       <li>
-        Test driven development
+        Test Driven Development
       </li>
       <li>
-        Climbing
+        Creative Problem Solving
       </li>
     </ul>
     
