--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <h1>Contact</h1>
         <p>
             Telephone: 
-            <a aria-hidden="true" href="tel:5405338504">(540) 533-8504</a>
+            <a aria-hidden="true" href="tel:5405338504">(814) 924-3422</a>
         </p>
         <p>
             Email:
@@ -73,7 +73,7 @@
         <p>Find me on</p>
         <div class="social-media">
             <!--Github logo-->
-            <img src="img/github-logo.svg" alt="github-logo">
+            <a href="https://github.com/Cameron8325"> <img src="img/github-logo.svg" alt="github-logo"> </a>
             <!--Twitter logo-->
             <img src="img/twitter-logo.svg" alt="twitter-logo">
             <!--LinkedIn logo-->
