--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <img src="img/profile-portrait.jpg" class="profile__portrait" alt="Cameron Smith Portrait">
         <h1>Hello World!</h1>
         <h2>My name is Cameron Smith! I am a <span>web</span> developer from America.</h2>
-        <a href="#">Check out some of my code.</a>
+        <a href="work.html">Check out some of my code.</a>
     </section>
 
     <footer class="page-footer">
         <p>Find me on</p>
         <div class="social-media">
             <!--Github logo-->
-            <img src="img/github-logo.svg" alt="github-logo">
+            <a href="https://github.com/Cameron8325"> <img src="img/github-logo.svg" alt="github-logo"> </a>
             <!--Twitter logo-->
             <img src="img/twitter-logo.svg" alt="twitter-logo">
             <!--LinkedIn logo-->
