Added Project Screenshots, will update and deploy tomorrow

--- a/work.html
+++ b/work.html
@@ -15,9 +15,7 @@
 <body>
     <main>
         <header class="page-header">
-
             <img src="img/spaceman.png" alt="astronaut" class="page-header__item" id="logo">
-
             <nav class="main-navigation page-header__item">
                 <ul role="menubar" class="navigation-list">
                     <li role="presentation">
@@ -28,13 +26,12 @@
                     </li>
                     <li role="presentation">
                         <a href="work.html" role="menuitem" class="navigation-list__item--active">Work</a>
-                      </li>
+                    </li>
                     <li role="presentation">
                         <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
                     </li>
                 </ul>
             </nav>
-
         </header>
 
         <section class="page-footer">
@@ -44,41 +41,57 @@
                     <h2>Simple Js App</h2>
                     <p>
                         In this project, we learned to use DOM manipulation and API fetching to create a simple Pokedex app. 
+                        <a href="img/pokeDex.png" target="_blank">
+                            <img src="img/pokeDex.png" alt="Simple JS App Screenshot" class="project-screenshot">
+                        </a>
                     </p>
                     <a href="https://github.com/Cameron8325/simple-js-app">See project on GitHub</a>
                 </div>
                 <div class="grid__item">
-                    <h2>MyFlix Backend</h2>
-                    <p>
-                        This is the server side application for MyFlix, a movie database application. It includes the backend API for managing users, movies, and user interactions.
-                    </p>
-                    <a href="https://github.com/Cameron8325/MyFlix">See project on GitHub</a>
-                </div>
-                <div class="grid__item">
                     <h2>MyFlix Client Side</h2>
                     <p>
-                        The MyFlix client-side is a React-based web application. The application features a responsive design, user authentication, and dynamic routing.
+                        The MyFlix client-side utilizes the backend I created, however I've made a front end with both Angular and React! The application features a responsive design, user authentication, and dynamic routing.
+                        <a href="img/reactFE.png" target="_blank">
+                            <img src="img/reactFE.png" alt="React Project Screenshot" class="project-screenshot">
+                        </a>
+                        <a href="img/angularFE.png" target="_blank">
+                            <img src="img/angularFE.png" alt="Angular Project Screenshot" class="project-screenshot">
+                        </a>
                     </p>
-                    <a href="https://github.com/Cameron8325/myFlix-client">See project on GitHub</a>
+                    <a href="https://github.com/Cameron8325/myFlix-client">React</a>
+                    <a href="https://github.com/Cameron8325/myFlix-Angular">Angular</a>
                 </div>
                 <div class="grid__item">
                     <h2>Meet App</h2>
                     <p>
-                        A serverless, progressive web application (PWA) made with React using test-driven development (TDD). The application utilizes the AWS Cloud for serverless functions and the Google Calendar API to fetch upcoming events.
+                        A serverless, progressive web application (PWA) made with React using test-driven development (TDD). The app utilizes the AWS Cloud for serverless functions and the Google Calendar API to fetch upcoming events.
+                        <a href="img/meetApp.png" target="_blank">
+                            <img src="img/meetApp.png" alt="Meet App Project Screenshot" class="project-screenshot">
+                        </a>
                     </p>
                     <a href="https://github.com/Cameron8325/Meet">See project on GitHub</a>
                 </div>
                 <div class="grid__item">
+                    <h2>MyFlix Backend</h2>
+                    <p>
+                        This is the server-side application for MyFlix, a movie database application. It includes the backend API for managing users, movies, and user interactions.
+                    </p>
+                    <a href="https://github.com/Cameron8325/MyFlix">See project on GitHub</a>
+                </div>
+                <div class="grid__item">
                     <h2>Native React App</h2>
                     <p>
-                       I am currently learning React Native and Native App Developement. This spot will be reserved for that project.
+                       I am currently learning React Native and Native App Development. This spot will be reserved for that project.
+                       <a href="img/nativeApp.png" target="_blank">
+                            <img src="img/nativeApp.png" alt="React Native App Project Screenshot" class="project-screenshot">
+                        </a>
                     </p>
-                    <a href="#">Read my latest blog post</a>
+                    <a href="#">See project on GitHub</a>
                 </div>
                 <div class="grid__item">
                     <h2>Your Project?</h2>
                     <p>
-                        I would love to become a useful asset for your project! I bring innovative and creative problem solving, along with an open mind and aptitude to learn more technologies.
+                        I would love to become a useful asset for your project! I bring innovative and creative problem-solving, along with an open mind and aptitude to learn more technologies.
                     </p>
                     <a href="contact.html">Contact me</a>
                 </div>
