Added another screen shot for work tab

--- a/work.html
+++ b/work.html
@@ -85,6 +85,9 @@
                        <a href="img/nativeApp.png" target="_blank">
                             <img src="img/nativeApp.png" alt="React Native App Project Screenshot" class="project-screenshot">
                         </a>
+                        <a href="img/nativeApp2.jpg" target="_blank">
+                            <img src="img/nativeApp2.jpg" alt="React Native Project Screenshot" class="project-screenshot">
+                        </a>
                     </p>
                     <a href="#">See project on GitHub</a>
                 </div>
