Resolved footer floating.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 </div>
             </section>
         </div>
+        <div class="spacer"></div>
         <div class="check-link">
             <a href="work.html">Check out some of my code.</a>
         </div>
