Removed img tag and added styling

--- a/case.html
+++ b/case.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Main Content -->
-    <div class="container" id="about-container" aria-labelledby="about">
+    <div class="container" id="case-container" aria-labelledby="about">
       <h2>Case Study</h2>
       <div class="content" id="about">
         <h3>Introduction:</h3>
@@ -100,7 +100,6 @@
           MyFlix React Client Side Application stood as a testament to
           perseverance and passion.
         </p>
-        <img src="#"/>
         
         <h3>Conclusion:</h3>
         <p>
