Added case study page.

--- a/case.html
+++ b/case.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case Study - Michael Smith Portfolio</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles.production.css" />
   </head>
 
   <body>
@@ -26,9 +26,10 @@
         <a href="index.html">Home</a>
         <a href="work.html">Work</a>
         <a href="contact.html">Contact</a>
+        <a href="about.html">About</a>
       </div>
     </nav>
-    <div class="menu-links" id="active" aria-label="Menu Links">
+    <div class="menu-links case-links" id="active" aria-label="Menu Links">
       <div class="item armed"><a href="index.html">Home</a></div>
       <div class="item armed"><a href="work.html">Work</a></div>
       <div class="item armed"><a href="contact.html">Contact</a></div>
@@ -43,76 +44,72 @@
         <p>
           In the vast landscape of web development, every project embarked upon
           is an adventure waiting to unfold. Among my endeavors stands the
-          MyFlix React Client Side Application, a journey of discovery where
-          challenges were met with determination, and triumphs celebrated with
-          pride.
+          myFlix Back End Creation, a journey of discovery where challenges
+          were met with determination, and triumphs celebrated with pride.
         </p>
 
         <h3>Chapter 1: The Spark of Innovation</h3>
         <p>
-          It all began with a spark of innovation, a desire to create a platform
-          where movie enthusiasts could immerse themselves in a world of
-          cinematic wonders. Armed with ambition and a thirst for knowledge, I
-          set out to transform this vision into reality.
+          It all began with a spark of innovation, a desire to construct a
+          backend ecosystem where movie enthusiasts could delve into a
+          repository of cinematic marvels. Armed with ambition and a thirst for
+          knowledge, I set out to transform this vision into a tangible reality.
         </p>
-        <img src="img/spark.jpg"/>
+        <img src="img/spark.jpg" />
 
         <h3>Chapter 2: Navigating Uncharted Territories</h3>
         <p>
-          As I delved into the realm of React development, I encountered the
-          daunting challenge of integrating an API for the very first time. Each
-          endpoint became a puzzle to solve, each data fetch an adventure into
-          the unknown. But with perseverance as my compass and determination as
-          my guide, I navigated through uncharted territories, one line of code
-          at a time.
+          As I ventured into the realm of Node.js development, I encountered the
+          formidable challenge of architecting an API for the very first time.
+          Each route became a puzzle to solve, each middleware an adventure into
+          the unexplored depths of backend logic. But with perseverance as my
+          compass and determination as my guide, I navigated through uncharted
+          territories, one line of code at a time.
         </p>
-        <img src="img/explore.jpg"/>
+        <img src="img/explore.jpg" />
 
         <h3>Chapter 3: The Dance of Error and Progress</h3>
         <p>
-          In the dance of error and progress, every misstep became a lesson
-          learned, and every setback a stepping stone towards mastery.
-          Initially, I found myself ensnared in the web of errors, each one
-          threatening to derail my journey. But with the guidance of mentors and
-          the wisdom gained from experience, I learned to embrace errors not as
-          obstacles, but as opportunities for growth.
+          In the intricate dance of error and progress, every stumble became a
+          lesson learned, and every bug a catalyst for improvement. Initially
+          entangled in a labyrinth of bugs, each one threatening to derail my
+          journey, I learned to embrace errors not as hindrances but as stepping
+          stones towards mastery, guided by mentors and seasoned by experience.
         </p>
-        <img src="img/error.jpg"/>
+        <img src="img/error.jpg" />
 
         <h3>Chapter 4: Crafting the Tapestry of Design</h3>
         <p>
-          As the horizon of my project expanded, so too did the challenge of
-          crafting a captivating front end design. The canvas before me was
-          blank, a vast expanse waiting to be filled with color and creativity.
-          With trepidation and excitement intertwined, I embarked on the journey
-          of design, weaving together elements of aesthetic appeal and
-          functional elegance to create a tapestry that would captivate the
-          senses.
+          As the scope of my project expanded, so did the challenge of crafting
+          a robust backend architecture. The canvas before me was blank,
+          awaiting the strokes of innovation and ingenuity. With trepidation and
+          excitement intertwined, I embarked on the journey of design, weaving
+          together elements of efficiency and scalability to create a tapestry
+          that would support the intricate needs of the application.
         </p>
-        <img src="img/design.jpg"/>
+        <img src="img/design.jpg" />
 
         <h3>Chapter 5: The Triumph of Resilience</h3>
         <p>
-          Through the highs and lows of the development process, one thing
-          remained constant: resilience. With every obstacle overcome and every
-          challenge conquered, I emerged stronger and more determined than
-          before. The journey was arduous, but the triumph was sweet, as the
-          MyFlix React Client Side Application stood as a testament to
-          perseverance and passion.
+          Through the peaks and valleys of the development journey, one thing
+          remained steadfast: resilience. With every hurdle surmounted and every
+          obstacle conquered, I emerged stronger and more determined than
+          before. The path was arduous, but the victory was sweet, as the
+          myFlix Backend stood as a testament to perseverance and passion.
         </p>
-        
+
         <h3>Conclusion:</h3>
         <p>
-          In the ever-evolving landscape of web development, the journey of
-          creating the MyFlix React Client Side Application was not merely a
-          project, but a saga of growth, discovery, and triumph. Through
-          challenges faced and obstacles overcome, I forged ahead, driven by the
-          belief that with determination and dedication, anything is possible.
-          As I embark upon new adventures in the world of web development, I
-          carry with me the lessons learned and the memories forged in the fires
-          of creation, forever shaping the path ahead.
+          In the ever-evolving landscape of web development, the creation of the
+          myFlix Backend was not merely a project, but a saga of growth,
+          exploration, and triumph. Through challenges tackled and barriers
+          breached, I pressed forward, fueled by the conviction that with
+          dedication and resolve, any endeavor is within reach. As I embark on
+          new adventures in the realm of web development, I carry with me the
+          lessons gleaned and the experiences forged in the crucible of
+          creation, forever shaping the path ahead.
         </p>
-        <img src="img/finished-Coding.jpg"/>
+        <img src="img/finished-Coding.jpg" />
       </div>
     </div>
     <div class="check-link">
