Updated text and added new imgs

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
                 staying updated with the latest technologies and trends in web development. I'm eager to tackle new
                 challenges and collaborate with others to create meaningful and impactful projects.
             </p>
-            <img class="about-pic" src="img/pMeme.jpg" alt="Portrait" />
+            <img class="about-pic" src="img/focused.webp" alt="Portrait" />
             <p>
                 When I'm not coding, you can find me learning about space, playing video games, or indulging in my
                 love for music. I believe in maintaining a healthy work-life balance to ensure creativity and
