--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <img src="img/profile-portrait.jpg" class="profile__portrait" alt="Cameron Smith Portrait">
                 <div class="profile-info">
                     <h1>Hello World!</h1>
-                    <h2>My name is Cameron Smith! I am a <span>web</span> developer from America.</h2>
-                    <p>Hello, I'm Cameron Smith, a versatile professional with a background in manufacturing operations, IT, and client services. From optimizing production efficiency as a Filler Operator/Safety Rep at Kraft Heinz to mastering new systems in manufacturing at ZM Sheet Metal, I've honed skills in problem-solving, collaboration, and quality assurance. As a former Help Desk Specialist for WSP/FEMA, my technical support and customer service expertise further solidified my adaptability and learning agility. Now, my goal is to transition into software engineering, drawing on my diverse experiences to offer unique perspectives in problem-solving and efficient system optimization. I'm eager to bring my skills to a professional environment that values continuous learning and growth.</p>
+                    <h2>My name is Cameron Smith! I am a software developer from America.</h2>
+                    <p>I'm versatile professional with a background in manufacturing operations, IT, and client services. From optimizing production efficiency as a Filler Operator/Safety Rep at Kraft Heinz to mastering new systems in manufacturing at ZM Sheet Metal, I've honed skills in problem-solving, collaboration, and quality assurance. As a former Help Desk Specialist for WSP/FEMA, my technical support and customer service expertise further solidified my adaptability and learning agility. Now, my goal is to transition into software engineering, drawing on my diverse experiences to offer unique perspectives in problem-solving and efficient system optimization. I'm eager to bring my skills to a professional environment that values continuous learning and growth.</p>
                 </div>
             </section>
         </div>
