--- a/work.html
+++ b/work.html
@@ -96,8 +96,8 @@
               <a href="https://github.com/Cameron8325/MyFlix" target="_blank"
                 >GitHub</a
               >
-              <a href="https://myflix-mcs.netlify.app/" target="_blank"
-                >Live Demo</a
+              <a href="case.html"
+                >Case Study</a
               >
             </div>
           </div>
