added home button logo

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <nav class="navbar" aria-label="Main Navigation">
         <div class="navbar-brand">
-            <img src="img/logo2.png" alt="Logo" />
+            <img src="img/logo2.png" href="index.html" alt="Logo" />
         </div>
         <div class="hamburger" onclick="toggleNavbar()" aria-label="Toggle Navigation">
             <div></div>
