--- a/case.html
+++ b/case.html
@@ -11,7 +11,7 @@
     <!-- Navbar -->
     <nav class="navbar" aria-label="Main Navigation">
       <div class="navbar-brand">
-        <img src="img/logo2.png" alt="Logo" />
+        <img src="img/logo2.png" href="index.html" alt="Logo" />
       </div>
       <div
         class="hamburger"
