Added resume and logo img home feature

--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,11 @@
 <body>
     <!-- Navbar -->
       <nav class="navbar" aria-label="Main Navigation">
-        <div class="navbar-brand">
-          <img src="img/logo2.png" href="index.html" alt="Logo" />
-        </div>
+        <a href="index.html">
+          <div class="navbar-brand">
+            <img src="img/logo2.png" alt="Logo" />
+          </div>
+      </a>
         <div class="hamburger" onclick="toggleNavbar()" aria-label="Toggle Navigation">
           <div></div>
           <div></div>
@@ -38,6 +40,8 @@
             <address>
                 <p>Email: <a href="mailto:cameron8325@gmail.com">cameron8325@gmail.com</a></p>
                 <p>Phone: (814) 924-3422</p>
+                <a href="img/Michael-Smith-Resume.pdf" download>Download my resume!</a>
+
             </address>
             <div class="social-links">
                 <p>Connect with me on:</p>
