--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar" aria-label="Main Navigation">
-        <div class="navbar-brand">
-          <img src="img/logo2.png" href="index.html" alt="Logo" />
-        </div>
+        <a href="index.html">
+            <div class="navbar-brand">
+              <img src="img/logo2.png" alt="Logo" />
+            </div>
+        </a>
         <div class="hamburger" onclick="toggleNavbar()" aria-label="Toggle Navigation">
           <div></div>
           <div></div>
