--- a/work.html
+++ b/work.html
@@ -9,9 +9,11 @@
 
   <body>
     <nav class="navbar" aria-label="Main Navigation">
-      <div class="navbar-brand">
-        <img src="img/logo2.png" href="index.html" alt="Logo" />
-      </div>
+      <a href="index.html">
+        <div class="navbar-brand">
+          <img src="img/logo2.png" alt="Logo" />
+        </div>
+    </a>
       <div class="hamburger" onclick="toggleNavbar()" aria-label="Toggle Navigation">
         <div></div>
         <div></div>
