Added new section and styling

--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Work - Michael Smith Portfolio</title>
-    <link rel="stylesheet" href="css/styles.production.css"/>
+    <link rel="stylesheet" href="css/styles.production.css" />
   </head>
 
   <body>
@@ -13,8 +13,12 @@
         <div class="navbar-brand">
           <img src="img/logo2.png" alt="Logo" />
         </div>
-    </a>
-      <div class="hamburger" onclick="toggleNavbar()" aria-label="Toggle Navigation">
+      </a>
+      <div
+        class="hamburger"
+        onclick="toggleNavbar()"
+        aria-label="Toggle Navigation"
+      >
         <div></div>
         <div></div>
         <div></div>
@@ -98,9 +102,7 @@
               <a href="https://github.com/Cameron8325/MyFlix" target="_blank"
                 >GitHub</a
               >
-              <a href="case.html"
-                >Case Study</a
-              >
+              <a href="case.html">Case Study</a>
             </div>
           </div>
         </div>
@@ -187,8 +189,8 @@
           </div>
           <div class="card-footer">
             <small
-              >Technologies Used: Typescript, Typedoc, Angular, Angular Material,
-              Jasmine, Karma, MyFlix Movie API</small
+              >Technologies Used: Typescript, Typedoc, Angular, Angular
+              Material, Jasmine, Karma, MyFlix Movie API</small
             >
             <div class="project-info"></div>
             <div class="project-buttons">
@@ -239,36 +241,42 @@
           </div>
         </div>
 
-        <!--Your Project?-->
+        <!--Recipify-->
         <div class="project">
-          <h2>Your Project?</h2>
+          <h2>Recipify</h2>
           <div class="project-description">
             <p>
-              I aim to be a valuable asset to your project, bringing innovative
-              solutions and creative problem-solving skills. My approach
-              involves maintaining an open mind and a strong willingness to
-              learn new technologies to contribute effectively. I am committed
-              to delivering high-quality work and exceeding expectations by
-              continuously refining my skills and staying updated with industry
-              trends. Technologies used are not limitations but opportunities
-              for growth and enhancement, ensuring comprehensive solutions
-              tailored to your project's needs.
+              Recipify is a sleek and user-friendly web application designed to
+              help users discover, share, and manage recipes effortlessly. Built
+              using Django, the app features a welcoming homepage, a
+              comprehensive recipe list, detailed recipe views, and advanced
+              search functionality.
             </p>
-            <a href="img/logo2.png" target="_blank">
-              <img src="img/logo2.png" alt="App Screenshot" />
-            </a>
+            <div class="image-container" id="python">
+              <a href="img/python1.png" target="_blank">
+                <img src="img/python1.png" alt="App Screenshot" />
+              </a>
+              <a href="img/python2.png" target="_blank">
+                <img src="img/python2.png" alt="App Screenshot" />
+              </a>
+              <a href="img/python3.png" target="_blank">
+                <img src="img/python3.png" alt="App Screenshot" />
+              </a>
+            </div>
           </div>
           <div class="card-footer">
             <div class="project-info">
               <small
-                >Technologies Used: Any! Proficient in a wide range of
-                technologies and always eager to expand my skill set to cater to
-                the unique requirements of your project.</small
+                >Django, Gunicorn, psycopg2-binary, pandas, numpy, matplotlib, pillow, whitenoise, requests, and requests-oauthlib.</small
               >
             </div>
-            <div class="project-buttons">
-              <a href="contact.html">Contact Me</a>
-            </div>
+            
+              <div class="project-buttons">
+                <a href="contact.html">GitHub</a>
+                <a href="contact.html">Live Demo</a>
+                <a href="contact.html">Contact Me</a>
+              </div>
+
           </div>
         </div>
       </div>
