--- a/work.html
+++ b/work.html
@@ -272,8 +272,8 @@
             </div>
             
               <div class="project-buttons">
-                <a href="contact.html">GitHub</a>
-                <a href="contact.html">Live Demo</a>
+                <a href="https://github.com/Cameron8325/recipe-app">GitHub</a>
+                <a href="https://frozen-river-49992-8fdfadf5baa0.herokuapp.com/">Live Demo</a>
                 <a href="contact.html">Contact Me</a>
               </div>
 
