Updated contact me page.

--- a/work.html
+++ b/work.html
@@ -267,7 +267,7 @@
           <div class="card-footer">
             <div class="project-info">
               <small
-                >Django, Gunicorn, psycopg2-binary, pandas, numpy, matplotlib, pillow, whitenoise, requests, and requests-oauthlib.</small
+                >Technologies Used: Django, Gunicorn, psycopg2-binary, pandas, numpy, matplotlib, pillow, whitenoise, requests, and requests-oauthlib.</small
               >
             </div>
             
